fixed models, site working, next do for loop

--- a/meituan/templates/meituan/home_page.html
+++ b/meituan/templates/meituan/home_page.html
@@ -23,6 +23,7 @@
  </form>
 
 <h2>addresses</h2>
- User {{order}} says: {{address}}
+ <p>Meal Ordered: {{order.meal}}</p>
+  <p>Delivery Address: {{order.address}}</p>
 </body>
 </html>
